<resources>
    <string name="app_name" translatable="false">MORSE</string>
    <string name="morse" translatable="false">Morse</string>
    <string name="use_the_buttons_below_to_write">Use the buttons below to write…</string>
    <string name="dash" translatable="false">-</string>
    <string name="dot" translatable="false">.</string>
    <string name="canc" translatable="false">CANC</string>
    <string name="slash" translatable="false">/</string>
    <string name="enter">ENTER</string>
    <string name="welcome_to_the_morse_app">Welcome to \n Morse App</string>
    <string name="text">Text</string>
    <string name="insert_text">Insert text…</string>
    <string name="write_to_translate">Write to translate…</string>
    <string name="lorem_ipsum" translatable="false">Lorem ipsum dolor sit amet… </string>
    <string name="learn" translatable="false">Learn</string>
    <string name="choose">CHOOSE</string>
    <string name="pairs">PAIRS</string>
    <string name="type">TYPE</string>
    <string name="write_the_answer">Write the answer…</string>
    <string name="wait" translatable="false">Wait...</string>
    <string name="home" translatable="false">HOME</string>
    <string name="pair">Pair</string>
    <string name="select_your_favourite_learn_method">Select a learn method…</string>
    <string name="correct">Correct!</string>
    <string name="wrong">Wrong!</string>
    <string name="score_0">Score:  0 </string>
    <string name="back">Back</string>
    <string name="endl" translatable="false">&#xA;</string>
    <string name="score">Score: %1$s</string>
    <string name="welcome_to">Welcome to</string>
    <string name="appTitle">Morse App</string>
    <string name="translate">Translate</string>
    <string name="translate_info">Do you want to translate from MORSE or TEXT?</string>
    <string name="text_to_morse">Text to Morse</string>
    <string name="morse_to_text">Morse to Text</string>
    <string name="insert_username" translatable="false">Insert Username...</string>
    <string name="save" translatable="false">Save</string>
    <string name="username" translatable="false">Username</string>
    <string name="settings" translatable="false">Settings</string>
    <string name="leaderboard" translatable="false">Leaderboard</string>
    <string name="insert_uuid" translatable="false">Insert your UUID...</string>
    <string name="uuid" translatable="false">UUID</string>
    <string name="you_re_not_logged_in">You\'re not logged in!</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign In</string>
    <string name="log_out">Log Out</string>
    <string name="account">Account</string>
    <string name="infiniChoose">∞ CHOOSE</string>
    <string name="highest_score_0" translatable="false">Highest score: 0</string>
    <string name="new_version">New version Available</string>
    <string name="update_string">Version %1$s is available. \nCurrent Version %2$s \nDo you want to update?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="selectChooseGamemode">Select the prompt type…</string>
    <string name="morseAndText">BOTH</string>
    <string name="onlyMorse">Only MORSE</string>
    <string name="onlyText">Only TEXT</string>

    <!-- VERSION NAME -->
    <string name="version" translatable="false">version...</string>
    <string name="words" translatable="false">Words</string>
    <string name="feedback">Feedback</string>

</resources>