<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sapoleone.morse.ui.home.HomeFragment"
    tools:visibility="visible">

    <TextView
        android:id="@+id/heading_Welcome"
        android:layout_width="368dp"
        android:layout_height="95dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="25dp"
        android:text="@string/welcome_to"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="?attr/colorPrimary"
        android:textSize="34sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- goto MORSE 2 TEXT -->

    <!-- goto TEXT 2 MORSE -->

    <TextView
        android:id="@+id/heading_AppTitle"
        android:layout_width="365dp"
        android:layout_height="59dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="25dp"
        android:text="@string/appTitle"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="?attr/colorPrimary"
        android:textSize="34sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- goto LEARN -->

    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version"
        android:textAlignment="textEnd"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/gotoConv"
        android:layout_width="200dp"
        android:layout_height="85dp"
        android:layout_marginStart="105dp"
        android:layout_marginEnd="105dp"
        android:text="@string/translate"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/gotoLearn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heading_AppTitle" />

    <Button
        android:id="@+id/gotoLearn"
        android:layout_width="200dp"
        android:layout_height="85dp"
        android:layout_marginStart="105dp"
        android:layout_marginEnd="105dp"
        android:layout_marginBottom="250dp"
        android:text="@string/learn"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/version"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gotoConv" />

    <Button
        android:id="@+id/btnFeedback"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="#00FFFFFF"
        android:gravity="center"
        android:text="@string/feedback"
        android:textAlignment="center"
        android:visibility="visible"
        app:icon="@drawable/baseline_feedback_24"
        app:iconGravity="start"
        app:iconSize="40dp"
        app:iconTint="@color/purple_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:iconGravity="top" />

    <TextView
        android:id="@+id/current_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/you_re_not_logged_in"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnAccount"
        android:layout_width="85dp"
        android:layout_height="80dp"
        android:background="#00FFFFFF"
        android:gravity="center"
        android:text="@string/account"
        android:textAlignment="center"

        app:icon="@drawable/ic_action_name"
        app:iconGravity="start"
        app:iconSize="60dp"
        app:iconTint="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:iconGravity="top" />

</androidx.constraintlayout.widget.ConstraintLayout>