<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.learn.type.LearnTypeFragment">

    <TextView
        android:id="@+id/title_Learn_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/learn"
        android:textColor="?attr/colorPrimary"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subtitle_Learn_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-15dp"
        android:text="@string/type"
        android:textColor="?attr/colorSecondaryVariant"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_Learn_3" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/typeInput"
        android:layout_width="297dp"
        android:layout_height="68dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="479dp"
        android:layout_marginEnd="55dp"
        android:autoLink="none"
        android:hint="@string/write_the_answer"
        android:inputType="text"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/backFromType"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        app:icon="?attr/actionModeCloseDrawable"
        app:iconGravity="textTop"
        app:iconSize="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/typePrompt"
        android:layout_width="218dp"
        android:layout_height="156dp"
        android:layout_marginTop="176dp"
        android:gravity="center"
        android:text="@string/wait"
        android:textAlignment="center"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/isCorrectType"
        android:layout_width="335dp"
        android:layout_height="98dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_correct_background"
        android:fadingEdge="horizontal|vertical"
        android:gravity="center"
        android:text="@string/lorem_ipsum"
        android:textAlignment="center"
        android:textSize="48sp"

        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/typePrompt" />

    <TextView
        android:id="@+id/scoreboardType"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="120dp"
        android:gravity="center"
        android:text="@string/score_0"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>